--- a/reference-app/css/app.css
+++ b/reference-app/css/app.css
@@ -109,6 +109,7 @@ ul
     display: flex !important;
     flex-direction: column;
     flex: 1;
+    overflow: hidden;
 }
 
 .otr-top-panel {
@@ -116,6 +117,7 @@ ul
 }
 
 .otr-bottom-panel {
+    min-height: 38px;
     margin: 10px 5px 5px 5px;
     display:flex;
     flex-direction: column;
